--- a/RK_Cosmetics_System/RK_Cosmetics_System.csproj
+++ b/RK_Cosmetics_System/RK_Cosmetics_System.csproj
@@ -66,6 +66,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_RK_Cosmetics_SystemDataSet3.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DB_RK_Cosmetics_SystemDataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet4.xsd</DependentUpon>
+    </Compile>
     <Compile Include="frm_Add_New_Brand.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -382,6 +387,17 @@
     </None>
     <None Include="DB_RK_Cosmetics_SystemDataSet3.xss">
       <DependentUpon>DB_RK_Cosmetics_SystemDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet4.xsc">
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DB_RK_Cosmetics_SystemDataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet4.xss">
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet4.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
