--- a/RK_Cosmetics_System/RK_Cosmetics_System.csproj
+++ b/RK_Cosmetics_System/RK_Cosmetics_System.csproj
@@ -81,6 +81,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_RK_Cosmetics_SystemDataSet6.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DB_RK_Cosmetics_SystemDataSet7.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet7.xsd</DependentUpon>
+    </Compile>
     <Compile Include="frm_Add_New_Brand.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -458,6 +463,17 @@
     </None>
     <None Include="DB_RK_Cosmetics_SystemDataSet6.xss">
       <DependentUpon>DB_RK_Cosmetics_SystemDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet7.xsc">
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet7.xsd</DependentUpon>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet7.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DB_RK_Cosmetics_SystemDataSet7.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DB_RK_Cosmetics_SystemDataSet7.xss">
+      <DependentUpon>DB_RK_Cosmetics_SystemDataSet7.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
