--- a/RK_Cosmetics_System/RK_Cosmetics_System/RK_Cosmetics_System.csproj
+++ b/RK_Cosmetics_System/RK_Cosmetics_System/RK_Cosmetics_System.csproj
@@ -35,10 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -182,6 +188,12 @@
     <Compile Include="Other\Frm_Splash_Screen.Designer.cs">
       <DependentUpon>Frm_Splash_Screen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report\Stock_Details_Report.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\Stock_Details_Report.Designer.cs">
+      <DependentUpon>Stock_Details_Report.cs</DependentUpon>
+    </Compile>
     <Compile Include="Update Form\frm_Update_Brand_Details.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -317,6 +329,9 @@
     <EmbeddedResource Include="Other\Frm_Splash_Screen.resx">
       <DependentUpon>Frm_Splash_Screen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Report\Stock_Details_Report.resx">
+      <DependentUpon>Stock_Details_Report.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Update Form\frm_Update_Brand_Details.resx">
       <DependentUpon>frm_Update_Brand_Details.cs</DependentUpon>
     </EmbeddedResource>
@@ -370,9 +385,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Report\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
