--- a/RK_Cosmetics_System/RK_Cosmetics_System/RK_Cosmetics_System.csproj
+++ b/RK_Cosmetics_System/RK_Cosmetics_System/RK_Cosmetics_System.csproj
@@ -239,6 +239,12 @@
     <Compile Include="Report\Customer_Report.Designer.cs">
       <DependentUpon>Customer_Report.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report\Stock_Details.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\Stock_Details.Designer.cs">
+      <DependentUpon>Stock_Details.cs</DependentUpon>
+    </Compile>
     <Compile Include="Report\Stock_Report.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -406,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Report\Customer_Report.resx">
       <DependentUpon>Customer_Report.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\Stock_Details.resx">
+      <DependentUpon>Stock_Details.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report\Stock_Report.resx">
       <DependentUpon>Stock_Report.cs</DependentUpon>
